// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmountLabel > should render 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`AmountLabel > should render compact 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`AmountLabel > should render compact with hint 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded pr-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <div
        aria-describedby="tippy-2"
        class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-700 text-theme-success-700 dark:text-white/70 dark:bg-theme-success-700 w-5 self-stretch"
        data-testid="AmountLabel__hint"
      >
        <div
          class="dark:text-white"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="hint-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <circle
                cx="4.5"
                cy="1"
                fill="currentColor"
                r="1"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`AmountLabel > should render negative 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border text-base flex h-full items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        - 10 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`AmountLabel > should render with hint 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded pr-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <div
        aria-describedby="tippy-1"
        class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-700 text-theme-success-700 dark:text-white/70 dark:bg-theme-success-700 -ml-1.5 px-2"
        data-testid="AmountLabel__hint"
      >
        <div
          class="dark:text-white"
        >
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="hint-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <circle
                cx="4.5"
                cy="1"
                fill="currentColor"
                r="1"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`AmountLabel > should render zero 1`] = `
<DocumentFragment>
  <span
    class="font-semibold overflow-hidden text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-base flex h-full items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        0 ARK
      </span>
    </div>
  </span>
</DocumentFragment>
`;
